--- a/assets/CSS/main.css
+++ b/assets/CSS/main.css
@@ -33,7 +33,7 @@
 /* Hero Section */
 .hero-section {
   min-height: 80vh;
-  background: url(../img/ice.webp) no-repeat center center/cover;
+  background: url(../img/nasa.jpg) no-repeat center center/cover;
   padding-top: 76px; /* Hauteur de la navbar + padding */
   position: relative;
   overflow: hidden;
@@ -47,7 +47,7 @@
   right: 0;
   bottom: 0;
   background: inherit;
-  filter: blur(8px);
+  filter: blur(0px);
   z-index: 1;
 }
 
