--- a/assets/CSS/main.css
+++ b/assets/CSS/main.css
@@ -33,7 +33,7 @@
 /* Hero Section */
 .hero-section {
   min-height: 100vh;
-  background: url(/assets/img/sky.jpg) no-repeat center center/cover;
+  background: url(assets/img/sky.jpg) no-repeat center center/cover;
   padding-top: 76px; /* Hauteur de la navbar + padding */
   position: relative;
   overflow: hidden;
